--- a/config/database.yml
+++ b/config/database.yml
@@ -10,13 +10,8 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: mysql2
-  encoding: utf8
-  database: sample_app
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: localhost
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
